Fix playlist options on mobile

--- a/ui/scss/component/_button.scss
+++ b/ui/scss/component/_button.scss
@@ -343,6 +343,9 @@
     .icon {
       stroke: var(--color-link);
     }
+    .button__label {
+      color: var(--color-link);
+    }
   }
 }
 
